--- a/recommend/templates/recommend/base.html
+++ b/recommend/templates/recommend/base.html
@@ -77,7 +77,7 @@
             <div class="collapse navbar-collapse" id="topNavBar">
 
                 <ul class="nav navbar-nav ">
-                    <li><a style="color:#4CAF50" href="/">Awesome-Movie-Recommender</a></li>
+                    <li><a style="color:#4CAF50" href="/">Movie Recommendation</a></li>
                 </ul>
                 <ul class="nav navbar-nav ">
                     <li><a href="{% url 'index' %}">&nbsp; Home</a></li>
